frontend/src/assets/main.css
@import "./base.css";

.slide-fade-in {
  animation: fadeIn 0.3s ease-in;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.slide-fade-out {
  animation: fadeOut 0.3s ease-in;
  animation-fill-mode: forwards;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.slide-info {
  position: absolute;
  top: 100%;
  transform: translateY(-100%);
}

.about-me-content {
    display: flex;
    align-items: center;
    flex-flow: column wrap;
    text-align: center;
    margin: auto 0.8rem;
}

.title{
    text-align: center;
    margin: 0.5rem;
    font-size: 1.5rem;
}

.video {
    display: inline;
    width: 400px;
    height: 190px;
}

.github-icon {
    vertical-align: middle;
    fill: var(--main-font-color);
    margin-right: 0.2rem;
}

.projects-title {
    text-align: center;
    font-weight: bold;
    font-style: italic;
}

.project-title {
 /*font-family: mainFont;*/
  border-bottom: 3px solid var(--main-font-color);
  width: fit-content;
  margin: 0.5rem auto;
  font-size: 2.7rem;
}

.open-source-container {
    margin-right: 0.5rem;
    margin-left: 0.5rem;
}

.open-source-project {
    margin: 0.5rem auto;
    max-width: 750px
}

.open-source-project-title {
    font-weight: bold;
}

.projects-content{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    max-width: 1400px;
    margin: auto;
}

.project-container{
    padding: 1rem 0;
}

.projects-container {
  background: var(--project-bg-color);
}

.video-github {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
}

.github-source {
    color: var(--main-font-color);
    margin: 0.25rem;
}

.project-brief {
    white-space: pre-wrap;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    margin: 0.5rem;
    width: 50%;
}

.read-more {
    text-align: center;
    display: block;
    color: var(--main-font-color);
    font-weight: bold;
}

.read-more-container {
    display: flex;
    justify-content: center;
}

.project-footer-content {
  white-space: pre-wrap;
  text-align: justify;
}

.projects-content img {
    width: 400px;
}

.project-footer-content-container {
  margin: 0.5rem;
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
}

.contact-content {
    text-align: center;
}

.general-container {
  color: var(--main-font-color);
}

.project-technologies {
    list-style: none;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;;
    padding: 0;
    margin: 0;
}

.tech-container {
    text-align: center;
    margin: 0.5rem;
}

.tech-container p {
    font-weight: bold;
}

header {
  margin: 3rem auto;
}

.item-tech {
    margin: 0.25rem;
}

.linkedin-icon {
    vertical-align: middle;
    margin-right: 0.2rem;
}

.linkedin-container a {
    color: var(--main-font-color);
}

.arrow-button {
  width: 40px;
  height: 40px;
  cursor: pointer;
}

.arrow-button path {
  fill: white;
}

a {
  color: var(--main-font-color);
}

.contact-title {
  font-weight: bold;
  border-top: 3px solid var(--main-font-color);
  padding-top: 1rem;
}

.footer-contact {
  display: flex;
  flex-flow: row-reverse wrap;
  justify-content: space-around;
  max-width: 1400px;
  margin: auto;
}

.guy-sit-svg {
  margin-top: 2rem;
  transform: scale(1.2);
}

@media screen and (min-width:0px) and (max-width:700px){

    .project-container{
        padding: 0;
    }

    .project-footer-content :deep(img) {
        width: 260px;
    }

    .project-footer-content {
        margin: 0 0.25rem;
    }

    .lang-ul {
        margin-right: 0;
    }

    .project-brief {
        width: 100%;
    }

    .video {
        display: inline;
        width: 100%;
    }

    .video-github {
        width: 400px;
    }

    .guy-sit-svg {
      margin-top: 2rem;
      transform: scale(1);
    }
}

@media screen and (min-width:700px) and (max-width:1035px){
}

